fix text alignment.

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -39,6 +39,7 @@ h3.headingX3 {
 	font-size: 25px;
 	font-weight: 700;
 	line-height: 28.5px;
+	text-align: start;
 }
 
 p.myText {
